Implement circuit breaker.